<resources>
    <string name="app_name">Shipping Calculator</string>
    <string name="zero">0</string>
    <string name="weightLBL">Weight of the package</string>
    <string name="ouncesLBL">(in ounces)</string>
    <string name="baseLBL">Base Cost:</string>
    <string name="addedCostLBL">Added Cost:</string>
    <string name="totalCostLBL">Total Cost:</string>
    <string name="zeroDec">$0.00</string>
    <string name="costString">$%.02f</string>
</resources>
