<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_weight_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/weightLBL"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center_horizontal"/>

    <EditText
        android:id="@id/et_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_weight_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textSize="35sp"
        android:hint="@string/zero">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_ounces_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_weight"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/ouncesLBL"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:gravity="center_horizontal"/>

</RelativeLayout>